Add 'scan_problem_raises_error' option, which lets you treat phase1 scan warnings as hard errors.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -118,3 +118,7 @@ exclude_comp=gz
 # When backing up, whether to enable O_NOATIME when opening files and
 # directories. The default is atime=0, which enables O_NOATIME.
 #atime=1
+.TP
+# When enabled, this causes problems in the phase1 scan (such as an 'include'
+# being missing) to be treated as fatal errors. The default is 0.
+#scan_problem_raises_error=1
