--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -74,6 +74,7 @@ SUBDIROBJS = \
 		server/protocol2/champ_chooser/champ_chooser.a \
 		client/monitor/client_monitor.a \
 		server/monitor/server_monitor.a \
+		server/dpth.o \
 		yajl/yajl.a
 
 # these are the objects that are changed by the .configure process
