Comment out ssl_key_password lines in the example configs. Make a note in all the documentation that it is only needed if you have an encrypted certificate.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -68,8 +68,8 @@ ssl_key = @sysconfdir@/ssl_cert-client.key
 # Client SSL compression. Default is zlib5. Set to zlib0 to turn it off.
 #ssl_compression = zlib5
 
-# SSL key password
-ssl_key_password = password
+# SSL key password, for loading a certificate with encryption.
+#ssl_key_password = password
 
 # Common name in the certificate that the server gives us
 ssl_peer_cn = burpserver
