--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -97,8 +97,8 @@ ssl_key = @sysconfdir@/ssl_cert-server.key
 # Server SSL compression. Default is zlib5. Set to zlib0 to turn it off.
 #ssl_compression = zlib5
 
-# SSL key password
-ssl_key_password = password
+# SSL key password, for loading a certificate with encryption.
+#ssl_key_password = password
 
 # Server DH file.
 ssl_dhfile = @sysconfdir@/dhfile.pem
