Make protocol2 sparse generation into a phase4. Currently broken.

--- a/src/server/protocol2/Makefile.in
+++ b/src/server/protocol2/Makefile.in
@@ -15,12 +15,12 @@ thisdir = src/server/protocol2
 SRCS = \
 	backup_phase2.o \
 	backup_phase3.o \
+	backup_phase4.o \
 	dpth.o \
 	rblk.o \
 	restore.o \
 	restore_spool.o \
-	rubble.o \
-	sparse_gen.o
+	rubble.o
 
 OBJS = $(SRCS:.c=.o)
 
