Inching towards protocol2 resume.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,6 +61,7 @@ OBJS = $(SRCS:.c=.o)
 SUBDIROBJS = \
 		protocol1/handy.o \
 		protocol1/msg.o \
+		server/resume.o \
 		server/protocol1/restore.o \
 		server/backup_phase1.o \
 		server/manios.o \
