Add gcov/lcov commands to the Makefiles, so that I can visualise code coverage of the unit tests.

--- a/autoconf/Make.common2.in
+++ b/autoconf/Make.common2.in
@@ -40,6 +40,7 @@ libtool-clean:
 
 clean:  libtool-clean
 	@$(RMF) a.out *.o *.bak *~ *.intpro *.extpro *.a Makefile vss_strip
+	@$(RMF) *.gcda *.gcno
 
 realclean: clean
 	@$(RMF) x
