--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,5 +1,5 @@
 
-LIBS = -lcheck -lpthread -lm -lrt -lssl -lcrypto
+LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt
 CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage
 
 SRCS = \
