Fix protocol2 bug where rblk wasn't initialised. Add linux_i386 machine to automatic tests. Use -Werror when build utests.
Change-Id: I099b1cebfc19c27652d00224e70c71e953c80a0f

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,6 +1,6 @@
 
 LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt
-CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage
+CFLAGS+=-Wall -Werror -g -fprofile-arcs -ftest-coverage
 
 SRCS = \
 	builders/build_attribs.c \
