Eliminate compile warnings from the Windows build and add  -Werror to the Windows CFLAGS. Change dhfile.pem generation command to use -dsaparam and 2048 bits.
Change-Id: Icf6c79fa7d25a4117f8b935e00c07d816ad2eff0

--- a/src/win32/Makefile.inc.in
+++ b/src/win32/Makefile.inc.in
@@ -48,7 +48,7 @@ STAB2CV := $(DEPKGS)/tools/bin/stab2cv
 WIN64=@WIN64@
 
 ifeq ($(WIN64),yes)
-   CFLAGS := -g -Wall -mthreads -O3 -fno-strict-aliasing -DHAVE_VSS64
+   CFLAGS := -g -Wall -Werror -mthreads -O3 -fno-strict-aliasing -DHAVE_VSS64
    LIBS_NETWORK := -lws2_32
    WIN_VERSION := 64
    BINDIR := $(BUILDDIR)/release64
