--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -82,6 +82,10 @@ ca_name = burpCA
 ca_server_name = burpserver
 ca_burp_ca = @sbindir@/burp_ca
 
+# Check for revoked certificates in the certificate revocation list.
+# Turn this off if you use the old ssl_extra_checks_script server script.
+ca_crl_check = 1
+
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = @sysconfdir@/ssl_cert_ca.pem
 
@@ -92,7 +96,7 @@ ssl_cert = @sysconfdir@/ssl_cert-server.pem
 ssl_key = @sysconfdir@/ssl_cert-server.key
 
 # Server SSL ciphers
-#ssl_ciphers = 
+#ssl_ciphers =
 
 # Server SSL compression. Default is zlib5. Set to zlib0 to turn it off.
 #ssl_compression = zlib5
@@ -151,9 +155,9 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # result in a lot of emails because clients normally connect once every 20
 # minutes. Requires notify_failure_script to be set above.
 #server_script_pre_notify = 0
-#server_script_post = 
-#server_script_post_arg = 
-#server_script_post_arg = 
+#server_script_post =
+#server_script_post_arg =
+#server_script_post_arg =
 #server_script_post_run_on_fail=0
 # As for server_script_pre_notify, but for post.
 #server_script_post_notify = 0
