Don't build separate .a files. Just use .o files.
Change-Id: I775f0973674cf8db89a5b74b1af0d0ed60455ec4

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -59,26 +59,106 @@ SRCS = \
 OBJS = $(SRCS:.c=.o)
 # FIX THIS: Should not need to add extra .o objects here.
 SUBDIROBJS = \
+		client/acl.o \
+		client/auth.o \
+		client/autoupgrade.o \
+		client/backup.o \
+		client/backup_phase1.o \
+		client/ca.o \
+		client/cvss.o \
+		client/delete.o \
+		client/diff.o \
+		client/extra_comms.o \
+		client/extrameta.o \
+		client/find.o \
+		client/glob_windows.o \
+		client/list.o \
+		client/main.o \
+		client/monitor/json_input.o \
+		client/monitor/lline.o \
+		client/monitor/status_client_ncurses.o \
+		client/monitor.o \
+		client/protocol1/backup_phase2.o \
+		client/protocol1/restore.o \
+		client/protocol2/backup_phase2.o \
+		client/protocol2/restore.o \
+		client/restore.o \
+		client/xattr.o \
 		protocol1/handy.o \
 		protocol1/msg.o \
-		server/resume.o \
-		server/protocol1/restore.o \
+		protocol1/rs_buf.o \
+		protocol1/sbuf_protocol1.o \
+		protocol2/blist.o \
+		protocol2/blk.o \
+		protocol2/rabin/rabin.o \
+		protocol2/rabin/rconf.o \
+		protocol2/rabin/win.o \
+		protocol2/sbuf_protocol2.o \
+		server/auth.o \
+		server/autoupgrade.o \
+		server/backup.o \
 		server/backup_phase1.o \
-		server/manios.o \
-		server/server.a \
-		client/client.a \
-		client/protocol2/client_protocol2.a \
-		protocol2/rabin/rabin.a \
-		protocol1/protocol1.a \
-		client/protocol1/client_protocol1.a \
-		protocol2/protocol2.a \
-		server/protocol1/server_protocol1.a \
-		server/protocol2/server_protocol2.a \
-		server/protocol2/champ_chooser/champ_chooser.a \
-		client/monitor/client_monitor.a \
-		server/monitor/server_monitor.a \
+		server/backup_phase3.o \
+		server/bu_get.o \
+		server/ca.o \
+		server/child.o \
+		server/compress.o \
+		server/delete.o \
+		server/diff.o \
 		server/dpth.o \
-		yajl/yajl.a
+		server/extra_comms.o \
+		server/list.o \
+		server/main.o \
+		server/manio.o \
+		server/manios.o \
+		server/monitor/browse.o \
+		server/monitor/cache.o \
+		server/monitor/cstat.o \
+		server/monitor/json_output.o \
+		server/monitor/status_server.o \
+		server/protocol1/backup_phase2.o \
+		server/protocol1/backup_phase4.o \
+		server/protocol1/bedup.o \
+		server/protocol1/blocklen.o \
+		server/protocol1/deleteme.o \
+		server/protocol1/dpth.o \
+		server/protocol1/fdirs.o \
+		server/protocol1/link.o \
+		server/protocol1/restore.o \
+		server/protocol1/zlibio.o \
+		server/protocol2/backup_phase2.o \
+		server/protocol2/backup_phase4.o \
+		server/protocol2/bsigs.o \
+		server/protocol2/champ_chooser/candidate.o \
+		server/protocol2/champ_chooser/champ_chooser.o \
+		server/protocol2/champ_chooser/champ_client.o \
+		server/protocol2/champ_chooser/champ_server.o \
+		server/protocol2/champ_chooser/dindex.o \
+		server/protocol2/champ_chooser/hash.o \
+		server/protocol2/champ_chooser/incoming.o \
+		server/protocol2/champ_chooser/scores.o \
+		server/protocol2/champ_chooser/sparse.o \
+		server/protocol2/dpth.o \
+		server/protocol2/rblk.o \
+		server/protocol2/restore.o \
+		server/protocol2/restore_spool.o \
+		server/quota.o \
+		server/restore.o \
+		server/rubble.o \
+		server/run_action.o \
+		server/sdirs.o \
+		server/timestamp.o \
+		server/resume.o \
+		yajl/yajl_alloc.o \
+		yajl/yajl_buf.o \
+		yajl/yajl.o \
+		yajl/yajl_encode.o \
+		yajl/yajl_gen.o \
+		yajl/yajl_lex.o \
+		yajl/yajl_parser.o \
+		yajl/yajl_tree.o \
+		yajl/yajl_version.o \
+
 
 # these are the objects that are changed by the .configure process
 EXTRAOBJS = @OBJLIST@
