--- a/src/client/monitor/Makefile.in
+++ b/src/client/monitor/Makefile.in
@@ -19,13 +19,6 @@ SRCS = \
 
 OBJS = $(SRCS:.c=.o)
 
-all: Makefile client_monitor.a
-	@echo "==== Make of client_monitor.a is good ===="
-	@echo " "
-
-client_monitor.a: $(OBJS)
-	@echo "Making $@ ..."
-	$(AR) rc  $@ $(OBJS)
-	$(RANLIB) $@
+all: Makefile $(OBJS)
 
 @MCOMMON2@
