--- a/src/protocol1/Makefile.in
+++ b/src/protocol1/Makefile.in
@@ -20,13 +20,6 @@ SRCS = \
 
 OBJS = $(SRCS:.c=.o)
 
-all: Makefile protocol1.a
-	@echo "==== Make of protocol1.a is good ===="
-	@echo " "
-
-protocol1.a: $(OBJS)
-	@echo "Making $@ ..."
-	$(AR) rc  $@ $(OBJS)
-	$(RANLIB) $@
+all: Makefile $(OBJS)
 
 @MCOMMON2@
