--- a/src/protocol2/Makefile.in
+++ b/src/protocol2/Makefile.in
@@ -19,13 +19,6 @@ SRCS = \
 
 OBJS = $(SRCS:.c=.o)
 
-all: Makefile protocol2.a
-	@echo "==== Make of protocol2.a is good ===="
-	@echo " "
-
-protocol2.a: $(OBJS)
-	@echo "Making $@ ..."
-	$(AR) rc  $@ $(OBJS)
-	$(RANLIB) $@
+all: Makefile $(OBJS)
 
 @MCOMMON2@
