More unit tests for server list.
Change-Id: Ieb3e17ec55c18c3146472f0221d53c773622c7e8

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,6 +1,6 @@
 
 LIBS = -lcheck -lpthread -lm -lssl -lcrypto -lrt -lacl -lcrypt
-CFLAGS+=-Wall -Werror -g -fprofile-arcs -ftest-coverage -x c++
+CFLAGS+=-Wall -g -fprofile-arcs -ftest-coverage -x c++
 
 SRCS = \
 	builders/build_attribs.c \
